GRAL:Version desplegada en pdn

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,3 +14,8 @@ database.dispatcher {
     fixed-pool-size = ${fixedConnectionPool}
   }
 }
+
+play.crypto.secret="EJWb;REsYngM]`y[Q?klE9/ZU]j2JaINKbGoOl_RS;oZ=fu9R:ZBTZzOLtS75eBi"
+
+##Evitar creacion RUNNING_PID
+pidfile.path = "/dev/null"
